[package]
name = "bevy_prototype_laminar_networking"
version = "0.1.0"
authors = ["Noah Callaway <noah@apsis.io>"]
edition = "2018"
description = ""
license = "MIT"
readme = "README.md"
repository = "https://github.com/ncallaway/bevy-prototype-laminar-networking"
keywords = ["game", "networking", "bevy", "laminar"]
categories = ["bevy", "networking"]
exclude = ["assets/**/*"]

[dependencies]

bevy = { git = "https://github.com/bevyengine/bevy" }
bytes = "0.5.6"
laminar = "0.3.2"

[dev-dependencies]
smallvec = "1.4.2"
rand = "0.7"
serde = "1.0.115"
bincode = "1.3.1"
serde_json = "1.0.57"

[lib]
name = "bevy_prototype_laminar_networking"
path = "src/lib.rs"

[[example]]
name = "testbed"
path = "examples/testbed/bin.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"