[package]
name = "bevy_prototype_networking_laminar"
version = "0.1.0"
authors = ["Noah Callaway <noah@apsis.io>"]
edition = "2018"
description = "This is a prototype of a networking crate for bevy. This create provides a low-level networking plugin built on top of laminar."
license = "MIT"
readme = "README.md"
repository = "https://github.com/ncallaway/bevy_prototype_networking_laminar"
homepage = "https://github.com/ncallaway/bevy_prototype_networking_laminar"
keywords = ["games", "networking", "bevy", "laminar"]
categories = ["games", "network-programming"]
exclude = ["assets/**/*"]

[dependencies]
bevy = "0.4"
laminar = "0.4"
crossbeam-channel = "0.5"                   # threaded communication
bytes = "0.6"                               # plumbing message payloads
uuid = { version = "0.8", features = ["v4"] } # socket handles

[dev-dependencies]
cargo-husky = { version = "1", features = ["user-hooks"] }
smallvec = "1.4"
rand = "0.7"
serde = "1.0"
bincode = "1.3"
serde_json = "1.0"

[lib]
name = "bevy_prototype_networking_laminar"
path = "src/lib.rs"

[[example]]
name = "testbed"
path = "examples/testbed/bin.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "multisocket"
path = "examples/multisocket.rs"